--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080/"
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:8080" ,
+      "pathRewrite": {
+        "^/api" : "/"
+      }
+    }
+  }
 }
